# TesteDeFiltros

./: README.md
backend/: .gitignore  pyproject.toml
backend/app/: routes.py
backend/image_filter_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: package-lock.json  package.json
frontend/src/: App.js
